# backendOpt

./: .gitignore  CMakeLists.txt  g2o_bal_class.h  main.cpp
common/: BALProblem.cpp  BALProblem.h  BundleParams.h  projection.h
common/flags/: CommandArgs.cpp  CommandArgs.h
common/tools/: random.h  rotation.h
